Add SDK-free APK repack and signing tooling
dl.google.com is blocked by this environment's egress policy, which rules out
the Android SDK, AGP and aapt2. The layout itself does not need them: the .kcm
is a plain resource stored verbatim in the APK's ZIP, so it can be swapped in
place.

tools/repack_apk.py replaces the layout entry, drops the stale signature and
4-byte aligns stored entries so resources.arsc can still be mmap'd.
tools/Sign.java signs v1+v2 with com.android.tools.build:apksig (the one
artifact of the toolchain that is on Maven Central) and verifies the result.

Verified on the rebuilt APK: signature valid from API 21 through 34, zip
integrity intact, no misaligned stored entries, package/version/receiver
identical to the original, and the embedded .kcm byte-identical to the source
in this repo.

The input method is not in an APK built this way; adding a component means
editing the binary manifest and resource table, which needs a real SDK build.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JydwhDVnGS2BfczmbGEqK5